force-app/main/default/objects/PWChrono_Employee_Transfer__c/PWChrono_Employee_Transfer__c.object-meta.xml
<CustomObject>
    <label>Employee Transfer</label>
    <nameField>
        <displayFormat>XFER-{0000}</displayFormat>
        <label>Transfer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>