force-app/main/default/objects/PWChrono_Employee_Transfer__c/fields/Current_Branch__c.field-meta.xml
<CustomField>
    <fullName>Current_Branch__c</fullName>
    <label>Current Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>