force-app/main/default/objects/PWChrono_Employee_Transfer__c/fields/Current_Department__c.field-meta.xml
<CustomField>
    <fullName>Current_Department__c</fullName>
    <label>Current Department</label>
    <referenceTo>PWChrono_Department__c</referenceTo>
    <relationshipLabel>Transfers (Current Department)</relationshipLabel>
    <relationshipName>PWChrono_Transfers_Current_Dept</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>