force-app/main/default/objects/PWChrono_Employee_Transfer__c/fields/Current_Designation__c.field-meta.xml
<CustomField>
    <fullName>Current_Designation__c</fullName>
    <label>Current Designation</label>
    <referenceTo>PWChrono_Designation__c</referenceTo>
    <relationshipLabel>Transfers (Current Designation)</relationshipLabel>
    <relationshipName>PWChrono_Transfers_Current_Desig</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>