force-app/main/default/objects/PWChrono_Employee_Transfer__c/fields/New_Department__c.field-meta.xml
<CustomField>
    <fullName>New_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Department</label>
    <referenceTo>PWChrono_Department__c</referenceTo>
    <relationshipLabel>Transfers (New Department)</relationshipLabel>
    <relationshipName>PWChrono_Transfers_New_Dept</relationshipName>
    <type>Lookup</type>
</CustomField>