force-app/main/default/objects/PWChrono_Employee_Transfer__c/fields/New_Designation__c.field-meta.xml
<CustomField>
    <fullName>New_Designation__c</fullName>
    <label>New Designation</label>
    <referenceTo>PWChrono_Designation__c</referenceTo>
    <relationshipLabel>Transfers (New Designation)</relationshipLabel>
    <relationshipName>PWChrono_Transfers_New_Desig</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>