force-app/main/default/objects/PWChrono_Employee_Transfer__c/fields/New_Reports_To__c.field-meta.xml
<CustomField>
    <fullName>New_Reports_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Reports To</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Transfers (New Manager)</relationshipLabel>
    <relationshipName>PWChrono_Transfers_New_Mgr</relationshipName>
    <type>Lookup</type>
</CustomField>