force-app/main/default/objects/PWChrono_Employee_Transfer__c/fields/Transfer_Details__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Details__c</fullName>
    <label>Transfer Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>